// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button fullWidth prop sets width to 100% 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  color: #fff;
  border-width: 0;
  border-style: solid;
  width: 100%;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c0:hover {
  background-color: #99caff;
}

.c0:disabled {
  opacity: 0.25;
}

<button
  className="c0"
/>
`;

exports[`Button radius prop sets a custom button radius 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 5px;
  background-color: #007aff;
  color: #fff;
  border-width: 0;
  border-style: solid;
  width: initial;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c0:hover {
  background-color: #99caff;
}

.c0:disabled {
  opacity: 0.25;
}

<button
  className="c0"
  radius="5px"
/>
`;

exports[`Button renders 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  color: #fff;
  border-width: 0;
  border-style: solid;
  width: initial;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c0:hover {
  background-color: #99caff;
}

.c0:disabled {
  opacity: 0.25;
}

<button
  className="c0"
/>
`;

exports[`Button renders GreenButton 1`] = `
.c1 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  color: #fff;
  border-width: 0;
  border-style: solid;
  width: initial;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c1:hover {
  background-color: #99caff;
}

.c1:disabled {
  opacity: 0.25;
}

.c0 {
  background-color: #0a0;
}

.c0:hover {
  background-color: #99dd99;
}

<button
  className="c0 c1"
/>
`;

exports[`Button renders OutlineButton 1`] = `
.c1 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  color: #fff;
  border-width: 0;
  border-style: solid;
  width: initial;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c1:hover {
  background-color: #99caff;
}

.c1:disabled {
  opacity: 0.25;
}

.c0 {
  background-color: #fff;
  color: #007aff;
  border-width: 2px;
  border-color: #007aff;
}

.c0:hover {
  background-color: #fff;
}

<button
  className="c0 c1"
/>
`;

exports[`Button renders OutlineButton with custom color 1`] = `
.c1 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  color: #fff;
  border-width: 0;
  border-style: solid;
  width: initial;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c1:hover {
  background-color: #99caff;
}

.c1:disabled {
  opacity: 0.25;
}

.c0 {
  background-color: #fff;
  color: purple;
  border-width: 2px;
  border-color: purple;
}

.c0:hover {
  background-color: #fff;
}

<button
  className="c0 c1"
  color="purple"
/>
`;

exports[`Button renders RedButton 1`] = `
.c1 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  color: #fff;
  border-width: 0;
  border-style: solid;
  width: initial;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c1:hover {
  background-color: #99caff;
}

.c1:disabled {
  opacity: 0.25;
}

.c0 {
  background-color: #c00;
}

.c0:hover {
  background-color: #eb9999;
}

<button
  className="c0 c1"
/>
`;

exports[`Button renders a button with text 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  color: #fff;
  border-width: 0;
  border-style: solid;
  width: initial;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c0:hover {
  background-color: #99caff;
}

.c0:disabled {
  opacity: 0.25;
}

<button
  className="c0"
>
  Hello
</button>
`;

exports[`Button size large sets height and font-size 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  color: #fff;
  border-width: 0;
  border-style: solid;
  width: initial;
  height: 48px;
  font-size: 16px;
  padding: 0 22px;
}

.c0:hover {
  background-color: #99caff;
}

.c0:disabled {
  opacity: 0.25;
}

<button
  className="c0"
  size="large"
/>
`;

exports[`Button size medium sets height and font-size 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  color: #fff;
  border-width: 0;
  border-style: solid;
  width: initial;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c0:hover {
  background-color: #99caff;
}

.c0:disabled {
  opacity: 0.25;
}

<button
  className="c0"
  size="medium"
/>
`;

exports[`Button size small sets height and font-size 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  color: #fff;
  border-width: 0;
  border-style: solid;
  width: initial;
  height: 32px;
  font-size: 12px;
  padding: 0 12px;
}

.c0:hover {
  background-color: #99caff;
}

.c0:disabled {
  opacity: 0.25;
}

<button
  className="c0"
  size="small"
/>
`;
